--- a/H1/loding.html
+++ b/H1/loding.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-cmn-Hans">
 <head>
-    <title>luuman</title>
+    <title>acechao</title>
     <meta charset="UTF-8">
-    <meta name="keywords" content="luuman,世平阜康">
-    <meta name="description" content="luuman,90后，水瓶座普通男青年！爱折腾，爱运动，更爱游离于错综复杂的编码与逻辑中，无法自拔。相信编程是一门艺术，自诩为游弋在代码里的人生。">
+    <meta name="keywords" content="acechao">
+    <meta name="description" content="喜欢音乐和写作，一个人的时候静静地哼着小曲，玩些文字；喜欢LOL；现在全身心投入于移动互联网行业，做一只快乐的产品汪。。">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit">
-    <meta name="author" content="luuman">
+    <meta name="author" content="acechao">
     <meta name="version" content="6.0.3">
     <link rel="apple-touch-icon-precomposed" href="img/luuman.png">
     <link rel="shortcut icon" type="image/ico" href="img/favicon.png">
