--- a/home/index.html
+++ b/home/index.html
@@ -4,7 +4,7 @@
     <title>acechao</title>
     <meta charset="UTF-8">
     <meta name="keywords" content="acechao,平凡之路">
-    <meta name="description" content="acechao,90后，一名毕业于湘潭大学电子专业的普通宅男，喜欢音乐，一个人的时候静静地哼唱；喜欢LOL；现在全身心投于移动互联网行业。">
+    <meta name="description" content="acechao,90后。">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit">
@@ -106,9 +106,9 @@
                     <div class="inner">
                         <div class="m-about">
                             <h1>关于我</h1>
-                            <p>acechao,90后，天蝎座非高富帅男青年，毕业于湖南省湘潭大学电子专业；
+                            <p>acechao,90后；
                                 <br/>
-                                喜欢音乐和写作，一个人的时候静静地哼着小曲，玩些文字；喜欢LOL；现在全身心投入于移动互联网行业，做一只快乐的产品汪。
+                                喜欢音乐。
                                 <br></p>
                         </div>
                         <div class="m-time">
